dist_sysconf_DATA = wmnutrc

EXTRA_DIST = BUGS ChangeLog README.asciidoc autogen.sh

# Files referenced by main README.asciidoc
EXTRA_DIST += \
	images/WMnut_desc.png \
	images/wmnut-0_09w.jpg \
	images/wmnut-0_09win.jpg \
	images/wmnut-0_60kde.jpg

SUBDIRS = src icons contrib doc

MAINTAINERCLEANFILES = wmnut-*.tar*
